[project]
name = "snake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vethorm", email = "13478023+Vethorm@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"